[package]
name = "sciimg"
version = "0.2.2"
authors = ["Kevin M. Gill <apoapsys@gmail.com>"]
edition = "2018"
description = "Base support for planetary science image processing"
repository = "https://github.com/kmgill/sciimg"
readme = "README.md"
keywords = ["planetary", "astrophotography", "science", "imaging"]
license = "MIT" 


[dependencies]
image = "0.23.14"
imageproc = "0.22.0"
memmap = "0.7.0"
chrono = "0.4.19"
rayon = "1.5.1"
lab = "0.11.0"
serde = { version = "1.0.125", features = ["derive"] }
string-builder = "0.2.0"